--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
             body {
                 padding: 0;
                 margin: 0;
-                background: #0e151e;
                 box-sizing: content-box;
-                color: #9da5bd;
+                background: #0e151e;
                 font-family: 'Andale Mono', monospace;
+            }
+            .loading-container {
+                background: #0e151e;
+                color: #9da5bd;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                pointer-events: none;
+                z-index: 20000; /* stats are at 10,000 */
             }
             @keyframes spinner-inner {
                 0% { transform: rotate(0deg) }
@@ -67,6 +75,7 @@
                 animation-delay: 2s;
             }
         </style>
+        <script src="https://cdn.jsdelivr.net/gh/lizard-isana/orb.js@v2.4/build/min/orb.v2.min.js"></script>
     </head>
     <body>
         <div class="loading-container fade-in">
