Initial worker implementation.

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,6 @@
                 Loading satellite data...
             </div>
         </div>
-        <script src="./bundle.js"></script>
+        <script src="./main.bundle.js"></script>
     </body>
 </html>
