--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
                 box-sizing: content-box;
                 background: #0e151e;
                 font-family: 'Andale Mono', monospace;
+                user-select: none;
+                -webkit-user-select: none;
             }
             .loading-container {
+                opacity: 0;
                 background: #0e151e;
                 color: #9da5bd;
                 position: absolute;
@@ -57,22 +60,40 @@
                 width: 100%;
             }
             @keyframes fade-in {
-                0% { opacity: 0; display: none; }
-                100% { opacity: 1; display: block; }
+                0% { opacity: 0; display: none; filter: blur(20px); }
+                100% { opacity: 1; display: block; filter: blur(0px); }
             }
             .fade-in {
-                animation: fade-in 1s ease forwards;
+                animation: fade-in 1s ease both;
             }
             @keyframes fade-out {
-                0% { opacity: 1; display: block; }
-                100% { opacity: 0; display: none; }
+                0% { opacity: 1; display: block; filter: blur(0px); }
+                100% { opacity: 0; display: none; filter: blur(6px); }
             }
             .fade-out {
-                animation: fade-out 1s ease forwards;
+                animation: fade-out 2s ease both;
             }
             .animation-delayed {
                 opacity: 0;
                 animation-delay: 2s;
+            }
+            .show-cursor {
+                cursor: default;
+            }
+            .hide-cursor {
+                cursor: none;
+            }
+            #react-root {
+                pointer-events: none;
+                opacity: 0;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                z-index: 100;
+                color: white;
+                text-shadow: 0 0 6px black, 0 0 8px black, 0 0 10px black;
             }
         </style>
         <script src="https://cdn.jsdelivr.net/gh/lizard-isana/orb.js@v2.4/build/min/orb.v2.min.js"></script>
@@ -88,6 +109,7 @@
                 Loading satellite data...
             </div>
         </div>
+        <div id="react-root"></div>
         <script src="./bundle.js"></script>
     </body>
 </html>
