Added UI for viewing additional stats.

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
                 user-select: none;
                 -webkit-user-select: none;
             }
+            .dg.ac {
+                z-index: 1001 !important;
+            }
             .loading-container {
                 opacity: 0;
                 background: #0e151e;
