Added ability to zoom in/out on date selection range. Also prepared files for static hosting.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,8 @@
 <html>
     <head>
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon/96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/16x16.png">
         <style type="text/css">
             body {
                 padding: 0;
@@ -9,6 +12,7 @@
                 font-family: 'Andale Mono', monospace;
                 user-select: none;
                 -webkit-user-select: none;
+                overflow: hidden;
             }
             .dg.ac {
                 z-index: 1001 !important;
@@ -113,6 +117,6 @@
             </div>
         </div>
         <div id="react-root"></div>
-        <script src="./bundle.js"></script>
+        <script src="/bundle.js"></script>
     </body>
 </html>
